# benchmarks

./: .build_and_run.sh  .coveralls.yml  .gitmodules  .travis.yml  .travis_setup.sh  AUTHORS  CMakeLists.txt  CONTRIBUTORS  LICENSE  README.md  build_and_run.sh  prepare.sh
src/: benchmarks.cc
src/generator/: config.proto  generator.cc  testdata.proto
src/proto/: message.proto
src/testdata/: test1.txt  test2.txt  test3.txt  test4.txt
src/thrift/: message.thrift
